--- a/index.html
+++ b/index.html
@@ -4,10 +4,23 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  <title>java</title>
 </head>
 <body>
-  <h1>Intro javaScript</h1>
-  <script src="/js/array.js"></script>
+  <header>
+    <nav>
+      <ul>
+        <li>
+          <a href="/pages/foreach.html">foreach</a><br>
+          
+        </li>
+        <li><a href="/pages/function.html">function</a></li>
+      </ul>
+    </nav>
+  </header>
+  <h1>ARRAYSS</h1>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, sapiente deleniti sit fuga quas possimus doloribus itaque, repellat consectetur mollitia sint, eos saepe praesentium sed dolor porro nulla dolore obcaecati.</p>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 </html>
