--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
           
         </li>
         <li><a href="/pages/function.html">function</a></li>
+        <li><a href="/pages/map.html">function</a></li>
       </ul>
     </nav>
   </header>
